--- a/index2.htm
+++ b/index2.htm
@@ -41,14 +41,14 @@
             </h2>
         </div>
 
-        <h3>
-            <i>
+        <h5 id="size">
+            <!-- <i> -->
                 phoniz is a mobile store where you can find a large number of phones with great offers.It provides the genuine products,thereby
                 increasing its reputation day by day. Delivery costs are also free in this website.Mobile phone market is
                 the biggest market especially in Country like India and The mobile Store is committed to sell mobile in cheapest
                 rate and has established their brand due to this commitment.
-            </i>
-        </h3>
+            <!-- </i> -->
+        </h5>
     </div>
     <div class="slideshow">
         <img id="prop" class="mySlides" src="https://static.digit.in/product/2623b966007767808c416e909f2706c53de8f83a.jpeg">
@@ -59,7 +59,7 @@
     </div>
 
     </div>
-    <div id="text">
+    <div id="text size">
         <h2>Mobile Phones with great offers</h2>
         <p>
             <i> Looking to purchase a new smartphone or mobile phone accessories for yourself or to gift a loved one? Choose
@@ -115,7 +115,7 @@
     <div id="text">
         <div class="box">
             <div class="flex-container2">
-                <div>
+                <div id="size">
                     <center>
                         <p>
                             <b>Quick Links</b>
@@ -134,7 +134,7 @@
                             <p>
                     </center>
                 </div>
-                <div>
+                <div id="size">
                     <center>
                         <p>
                             <b>Announcements</b>
@@ -145,7 +145,7 @@
                         </p>
                     </center>
                 </div>
-                <div>
+                <div id="size">
                     <center>
                         <p>
                             <b>Upcoming Product/products</b>
